@@ -1,0 +1,11 @@
+Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=69681">bug 69681</a>,
+canvas.toDataURL("image/jpeg") should not crash.<br>
+<p id="log"></p>
+<canvas id="canvas" width="2000" height="2000"></canvas>
+<script>
+var test = document.getElementById('canvas').toDataURL('image/jpeg');
+// Test passes if we don't crash.
+document.getElementById('log').innerHTML = 'PASS';
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
